Ajout de pas mal de tutos divers des chaines que je suis

--- a/content/apprentissage/a-10c.md
+++ b/content/apprentissage/a-10c.md
@@ -65,3 +65,7 @@ weight = 1975
 {{< ressource-playlist-youtube "PLmL0WZQili6D_AsHa3q_yUBuDU2FIWBNt" >}}
 </div>
 
+<div class="contenu"> <!-- deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjWyo6K1V8bpGizSYwU_e_Xz" >}}
+</div>
