--- a/content/apprentissage/ch-47.md
+++ b/content/apprentissage/ch-47.md
@@ -1,5 +1,14 @@
 +++
 title = "CH-47F Chinook"
 weight = 1962
-draft = true
 +++
+
+<div class="contenu"> <!-- Fox 3 DCS //-->
+{{< canal-youtube "id" "UC4j_os41_iqlbX6kkQMbnmw" >}}
+{{< ressource-playlist-youtube "PLqGY49W4jCyJK2ICnUEBseskqnfvMDalI" >}}
+</div>
+
+<div class="contenu"> <!-- deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjXAPJfIkFTB43FT4Ybtf8ug" >}}
+</div>
