--- a/content/apprentissage/f-14.md
+++ b/content/apprentissage/f-14.md
@@ -18,6 +18,16 @@ weight = 1974
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3320015/" "F-14 Kneeboard Checklists" "planchette" >}}
 </div>
 
+<div class="contenu"> <!-- Doc //-->
+{{< canal-youtube "id" "UCgmpgFZDI_FEfuAKTyYe88g" >}}
+{{< ressource-playlist-youtube "PLjV7iPvvdDf6tBzQzoDiIG-00ReWu-L79" >}}
+</div>
+
+<div class="contenu"> <!-- Ian Christie //-->
+{{< canal-youtube "id" "UC4kJt_8Jw9ByL10ar6b8rQg" >}}
+{{< ressource-playlist-youtube "PL0jjGRFQGC0rILzRKdEMbncsOl2Y9ncJZ" >}}
+</div>
+
 <div class="contenu"> <!-- Olivier Gaming //-->
 {{< canal-youtube "id" "UCvghcDSMWXUjLEjFcBBumVw" >}}
 {{< ressource-playlist-youtube "PLpbLV3TvMUKweaNlfW8vZExcyKDl8BSM1" >}}
@@ -67,4 +77,3 @@ weight = 1974
 {{< canal-youtube "id" "UCdzYmqc6g789zNyXBcBpPeg" >}}
 {{< ressource-playlist-youtube "PLwWsAperJSsre4LOHeSbcjFgHYx00xi_A" >}}
 </div>
-
