--- a/content/apprentissage/f-15e.md
+++ b/content/apprentissage/f-15e.md
@@ -19,16 +19,16 @@ weight = 1989
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3332783/" "AIR WARFARE GROUP F-15E PILOT/WSO CHECKLISTS FOR NIGHT [By Banjo_AWG]" "planchette" >}}
 </div>
 
-<div class="contenu"> <!-- Doc //-->
-{{< canal-youtube "id" "UCgmpgFZDI_FEfuAKTyYe88g" >}}
-{{< ressource-video-youtube "RU4dsJ-nScA" >}}
-</div>
-
 <div class="contenu de_qualite"> <!-- RAZBAM //-->
 {{< canal-youtube "id" "UC2dsi9lIIZREo9uYcrMx3fg" >}}
 {{< ressource-playlist-youtube "PLwKSNTU2afuA_G07xII__IsKRTgyenQaN" >}}
 </div>
 
+<div class="contenu"> <!-- Doc //-->
+{{< canal-youtube "id" "UCgmpgFZDI_FEfuAKTyYe88g" >}}
+{{< ressource-video-youtube "RU4dsJ-nScA" >}}
+<!-- Il y a aussi des video F15, pas de playlist probablement à cause de l'affaire Razbam -->
+</div>
 
 <div class="contenu"> <!-- Fox 3 DCS //-->
 {{< canal-youtube "id" "UC4j_os41_iqlbX6kkQMbnmw" >}}
