--- a/content/apprentissage/f-4.md
+++ b/content/apprentissage/f-4.md
@@ -7,3 +7,23 @@ weight = 1960
 {{< canal-chucksguide >}}
 {{< ressource-chucksguide "f-4e" >}}
 </div>
+
+<div class="contenu"> <!-- Ian Christie //-->
+{{< canal-youtube "id" "UC4kJt_8Jw9ByL10ar6b8rQg" >}}
+{{< ressource-playlist-youtube "PL0jjGRFQGC0pFbi5Be73w71d_ybeTo_bE" >}}
+</div>
+
+<div class="contenu"> <!-- CasmoTV//-->
+{{< canal-youtube "id" "UCcZauUXQ-dHSFqqqTXMLBSg" >}}
+{{< ressource-playlist-youtube "PLNtUtkZqN36mEo_Wswhsu9Mpd2JScv6wT" >}}
+</div>
+
+<div class="contenu"> <!-- Spudknocker //-->
+{{< canal-youtube "id" "UC1Rsn65d8Qzy4T9A8435sYw" >}}
+{{< ressource-playlist-youtube "PLZ8X4p18pdbna7zc80SWx3YC0xTPyDbW3" >}}
+</div>
+
+<div class="contenu"> <!-- deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjUZqWlmbqXoQL6SzhG-t7XO" >}}
+</div>
