--- a/content/apprentissage/oh-58.md
+++ b/content/apprentissage/oh-58.md
@@ -1,5 +1,14 @@
 +++
 title = "OH-58D Kiowa Warrior"
 weight = 1969
-draft = true
 +++
+
+<div class="contenu"> <!-- CasmoTV//-->
+{{< canal-youtube "id" "UCcZauUXQ-dHSFqqqTXMLBSg" >}}
+{{< ressource-playlist-youtube "PLNtUtkZqN36nJOidaGyzbenoL94jEnVgw" >}}
+</div>
+
+<div class="contenu"> <!-- deephack //-->
+{{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
+{{< ressource-playlist-youtube "PLLY_KGBSBGjXSrXHCHQ0CbuF-Pn_oNABP" >}}
+</div>
