--- a/content/apprentissage/sa342.md
+++ b/content/apprentissage/sa342.md
@@ -38,3 +38,7 @@ weight = 1967
 {{< ressource-playlist-youtube "PLoiMNu5jyFzQTjEIhGFPWZ2qFfCIVf0l9" >}}
 </div>
 
+<div class="contenu"> <!-- nazradu //-->
+{{< canal-youtube "id" "UCTtzk7r9iAsNSjbeLUC5-_w" >}}
+{{< ressource-playlist-youtube "PLN_dChu0spFFpSsLwpe7ZCESU5yB1bU2U" >}}
+</div>
