mustang: guide sur combat aérien (principalement la visée)

--- a/content/apprentissage/p-51d.md
+++ b/content/apprentissage/p-51d.md
@@ -19,6 +19,10 @@ weight = 1942
 {{< ressource-playlist-youtube "PLroS5xjXW90scZqDZ8CyOTOMTJ6htGu4m" >}}
 </div>
 
+<div class="contenu"> <!-- Diesel Thunder Aviation //-->
+{{< canal-youtube "id" "UCrmdyKs7UAn7eVj3BvWNOCA" >}}
+{{< ressource-video-youtube "FqPWK7qdjFM" >}}
+</div>
 
 <div class="contenu"> <!-- Loulou de DCS World //-->
 {{< canal-youtube "id" "UCbNRGPeNjUke5pIzBZGOrig" >}}
