--- a/content/apprentissage/p-47d.md
+++ b/content/apprentissage/p-47d.md
@@ -24,3 +24,7 @@ weight = 1942
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3316646/" "Requiem's P-47D Cockpit Workflows" "planchette" >}}
 </div>
 
+<div class="contenu"> <!-- Max100 //-->
+{{< canal-youtube "id" "UC5Ew1xxol9-IajBKHB_mugQ" >}}
+{{< ressource-video-youtube "NoD6tMDNCU0" >}}
+</div>
