--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -13,12 +13,6 @@ weight = 1964
 {{< ressource-chucksguide "f-5e3" >}}
 </div>
 
-<div class="contenu de_qualite"> <!-- Requiem / The Air Combat Tutorial Library //-->
-{{< canal-youtube "id" "UCwV5RLX7mkaDy5gTIiuwGmg" >}}
-{{< ressource-playlist-youtube "PLnyigzFtHeNoVFUIFFkc8Zvzvr2ZN3Qme" >}}
-{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3312277/" "Requiem's F-5E Cockpit Workflows & Kneeboard" "planchette" >}}
-</div>
-
 <div class="contenu de_qualite"> <!-- Minsky //-->
 {{< canal-web "Minsky" >}}
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3343629/" "F-5E-3 Kneeboard Suite" "planchette" >}}
@@ -29,9 +23,15 @@ weight = 1964
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3330980/" "F-5E Kneeboard Checklists" "planchette" >}}
 </div>
 
-<div class="contenu de_qualite"> <!-- Bunyap Sims //-->
-{{< canal-youtube "id" "UCChA7JzaWoakPbvpmUzMH5g" >}}
-{{< ressource-playlist-youtube "PLoiMNu5jyFzTWpTVFFz9wls4woqHzRloY" >}}
+<div class="contenu de_qualite"> <!-- FlyingHueman //-->
+{{< canal-web "FlyingHueman" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3320266/" "F-5E Bomb And Rocket Depression Tables For Kneeboard" "planchette" >}}
+</div>
+
+<div class="contenu de_qualite"> <!-- Requiem / The Air Combat Tutorial Library //-->
+{{< canal-youtube "id" "UCwV5RLX7mkaDy5gTIiuwGmg" >}}
+{{< ressource-playlist-youtube "PLnyigzFtHeNoVFUIFFkc8Zvzvr2ZN3Qme" >}}
+{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3312277/" "Requiem's F-5E Cockpit Workflows & Kneeboard" "planchette" >}}
 </div>
 
 <div class="contenu"> <!-- Tricker //-->
@@ -44,10 +44,9 @@ weight = 1964
 {{< ressource-playlist-youtube "PLLnxK6CJYwVdce8ML3Phj-OCU597qOqab" >}}
 </div>
 
-
-<div class="contenu"> <!-- FlyingHueman //-->
-{{< canal-web "FlyingHueman" >}}
-{{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3320266/" "F-5E Bomb And Rocket Depression Tables For Kneeboard" "planchette" >}}
+<div class="contenu"> <!-- Bunyap Sims //-->
+{{< canal-youtube "id" "UCChA7JzaWoakPbvpmUzMH5g" >}}
+{{< ressource-playlist-youtube "PLoiMNu5jyFzTWpTVFFz9wls4woqHzRloY" >}}
 </div>
 
 <div class="contenu"> <!-- Deephack //-->
