Ajout d'une vidéo de Ian Christie sur le bombardement en F-5E

--- a/content/apprentissage/f-5.md
+++ b/content/apprentissage/f-5.md
@@ -34,6 +34,11 @@ weight = 1964
 {{< ressource-web "https://www.digitalcombatsimulator.com/en/files/3312277/" "Requiem's F-5E Cockpit Workflows & Kneeboard" "planchette" >}}
 </div>
 
+<div class="contenu de_qualite"> <!-- Ian Christie //-->
+{{< canal-youtube "id" "UC4kJt_8Jw9ByL10ar6b8rQg" >}}
+{{< ressource-video-youtube "83-O8AueaUE" >}}
+</div>
+
 <div class="contenu"> <!-- Tricker //-->
 {{< canal-youtube "id" "UCcSm9zitjaWrfJxfM-Q-djQ" >}}
 {{< ressource-playlist-youtube "PL4a4myRJ63XvP8RFEKD2KREP0GAiZDBWI" >}}
