Ajout de vidéos C-130J, CH-47, Mig-29

--- a/content/apprentissage/c-130j.md
+++ b/content/apprentissage/c-130j.md
@@ -1,5 +1,10 @@
 +++
 title = "C-130J Hercules"
 weight = 1956
-draft = true
 +++
+
+<div class="contenu"> <!-- ralfidude //-->
+{{< canal-youtube "forUsername" "ralfidude" >}}
+{{< ressource-video-youtube "c1mSlmLjLi8" >}}
+{{< ressource-video-youtube "aSbjY2n99-M" >}}
+</div>
