--- a/content/apprentissage/ch-47.md
+++ b/content/apprentissage/ch-47.md
@@ -8,6 +8,17 @@ weight = 1962
 {{< ressource-playlist-youtube "PLqGY49W4jCyJK2ICnUEBseskqnfvMDalI" >}}
 </div>
 
+<div class="contenu"> <!-- Dam CH47-Pilot //-->
+{{< canal-youtube "id" "UCltb5TFTiytdRvMclpXC8pQ" >}}
+{{< ressource-video-youtube "5jRN4xVFSR4" >}}
+{{< ressource-video-youtube "LLyGwf_JU54" >}}
+</div>
+
+<div class="contenu"> <!-- Matt Waggner //-->
+{{< canal-youtube "id" "UCHa9LMylydkT0T3qSzAVrlw" >}}
+{{< ressource-playlist-youtube "PLer9oF4AanvG_szlOrJbx4Vbp3S6me3Jg" >}}
+</div>
+
 <div class="contenu"> <!-- deephack //-->
 {{< canal-youtube "id" "UCF-FeKRcwo-7CH5ie337F_g" >}}
 {{< ressource-playlist-youtube "PLLY_KGBSBGjXAPJfIkFTB43FT4Ybtf8ug" >}}
