Réduction du nombre de requêtes à l'API en passant par le channelId

--- a/content/apprentissage/a-10c.md
+++ b/content/apprentissage/a-10c.md
@@ -35,12 +35,12 @@ weight = 1975
 </div>
 
 <div class="contenu de_qualite"> <!-- ralfidude //-->
-{{< canal-youtube "forUsername" "ralfidude" >}}
+{{< canal-youtube "id" "UC7lK8qHqm21bv2jW6TKdNKA" >}}
 {{< ressource-playlist-youtube "PLYA7v8u34qu89mbs4TGGEIhkwJ8kgFRWr" >}}
 </div>
 
-<div class="contenu">
-{{< canal-youtube "forUsername" "Tricker" >}}
+<div class="contenu"> <!-- Tricker //-->
+{{< canal-youtube "id" "UCcSm9zitjaWrfJxfM-Q-djQ" >}}
 {{< ressource-video-youtube "xo2ov_jjfLs" >}}
 </div>
 
