--- a/content/apprentissage/c-130j.md
+++ b/content/apprentissage/c-130j.md
@@ -4,7 +4,7 @@ weight = 1956
 +++
 
 <div class="contenu"> <!-- ralfidude //-->
-{{< canal-youtube "forUsername" "ralfidude" >}}
+{{< canal-youtube "id" "UC7lK8qHqm21bv2jW6TKdNKA" >}}
 {{< ressource-video-youtube "c1mSlmLjLi8" >}}
 {{< ressource-video-youtube "aSbjY2n99-M" >}}
 </div>
