--- a/content/apprentissage/f-14.md
+++ b/content/apprentissage/f-14.md
@@ -48,7 +48,7 @@ weight = 1974
 {{< ressource-playlist-youtube "PLT-PAUSaoTg0CO_vUoQgA2sSfTy6ZpXF_" >}}
 </div>
 
-<div class="contenu"> <!-- Spudknocker //-->
+<div class="contenu"> <!-- Spud Spike //-->
 {{< canal-youtube "id" "UC1Rsn65d8Qzy4T9A8435sYw" >}}
 {{< ressource-playlist-youtube "PLZ8X4p18pdbmUs_ujgpyRSMXg8vzGR46Z" >}}
 </div>
@@ -69,7 +69,7 @@ weight = 1974
 </div>
 
 <div class="contenu"> <!-- EFPV //-->
-{{< canal-youtube "forUsername" "ecolepilotefrance" >}}
+{{< canal-youtube "id" "UC1TuJX4HZND3KttV-bH0aMA" >}}
 {{< ressource-playlist-youtube "PLxeAPpKC04wsPc6ObTkOdQ8NxIcBw5s8J" >}}
 </div>
 
