--- a/content/apprentissage/f-16c.md
+++ b/content/apprentissage/f-16c.md
@@ -44,7 +44,7 @@ Principalement sur le F-16.
 {{< ressource-playlist-youtube "PLlrB2czNQh1YXERWJiL-BpoueifYwvf_Q" >}}
 </div>
 
-<div class="contenu"> <!-- Spudknocker //-->
+<div class="contenu"> <!-- Spud Spike //-->
 {{< canal-youtube "id" "UC1Rsn65d8Qzy4T9A8435sYw" >}}
 {{< ressource-playlist-youtube "PLZ8X4p18pdblNAFn4chmZmnRPINvWWItT" >}}
 </div>
@@ -85,7 +85,7 @@ Principalement sur le F-16.
 </div>
 
 <div class="contenu"> <!-- EFPV //-->
-{{< canal-youtube "forUsername" "ecolepilotefrance" >}}
+{{< canal-youtube "id" "UC1TuJX4HZND3KttV-bH0aMA" >}}
 {{< ressource-video-youtube "sWHKJ20pjdk" >}}
 </div>
 
