--- a/content/apprentissage/f-4.md
+++ b/content/apprentissage/f-4.md
@@ -18,7 +18,7 @@ weight = 1960
 {{< ressource-playlist-youtube "PLNtUtkZqN36mEo_Wswhsu9Mpd2JScv6wT" >}}
 </div>
 
-<div class="contenu"> <!-- Spudknocker //-->
+<div class="contenu"> <!-- Spud Spike //-->
 {{< canal-youtube "id" "UC1Rsn65d8Qzy4T9A8435sYw" >}}
 {{< ressource-playlist-youtube "PLZ8X4p18pdbna7zc80SWx3YC0xTPyDbW3" >}}
 </div>
