--- a/content/apprentissage/jf-17.md
+++ b/content/apprentissage/jf-17.md
@@ -35,7 +35,7 @@ weight = 2010
 </div>
 
 <div class="contenu"> <!-- EFPV //-->
-{{< canal-youtube "forUsername" "ecolepilotefrance" >}}
+{{< canal-youtube "id" "UC1TuJX4HZND3KttV-bH0aMA" >}}
 {{< ressource-playlist-youtube "PLxeAPpKC04wvjynpY_j7fpQnAAA85YrqU" >}}
 </div>
 
