--- a/content/apprentissage/ka-50.md
+++ b/content/apprentissage/ka-50.md
@@ -19,7 +19,7 @@ weight = 1987
 </div>
 
 <div class="contenu de_qualite"> <!-- 131st Death Vipers //-->
-{{< canal-youtube "forUsername" "whitesky545" >}}
+{{< canal-youtube "id" "UCHS41zEhx8XJnnfsnOKpRNA" >}}
 {{< ressource-playlist-youtube "PLHX49UqNq5KV7_PrHVt4U_SQUPy9ih_dY" >}}
 {{< ressource-playlist-youtube "PLHX49UqNq5KW6yi39lndpKXXQQyEk30XO" >}}
 </div>
