--- a/content/apprentissage/m-2000c.md
+++ b/content/apprentissage/m-2000c.md
@@ -74,7 +74,7 @@ weight = 1984
 </div>
 
 <div class="contenu"> <!-- 131th Death Vipers //-->
-{{< canal-youtube "forUsername" "whitesky545" >}}
+{{< canal-youtube "id" "UCHS41zEhx8XJnnfsnOKpRNA" >}}
 {{< ressource-video-youtube "yloLS1DWlKw" >}}
 </div>
 
