--- a/content/apprentissage/sa342.md
+++ b/content/apprentissage/sa342.md
@@ -14,7 +14,7 @@ weight = 1967
 </div>
 
 <div class="contenu"> <!-- 131st Death Vipers //-->
-{{< canal-youtube "forUsername" "whitesky545" >}}
+{{< canal-youtube "id" "UCHS41zEhx8XJnnfsnOKpRNA" >}}
 {{< ressource-playlist-youtube "PLHX49UqNq5KV4aAVECp9T_Mlq8xYU6USw" >}}
 </div>
 
