--- a/content/apprentissage/f-15e.md
+++ b/content/apprentissage/f-15e.md
@@ -41,7 +41,7 @@ weight = 1989
 </div>
 
 
-<div class="contenu"> <!-- Spudknocker //-->
+<div class="contenu"> <!-- Spud Spike //-->
 {{< canal-youtube "id" "UC1Rsn65d8Qzy4T9A8435sYw" >}}
 {{< ressource-playlist-youtube "PLZ8X4p18pdbnp8aIGrrRHKT3SDlsLFnyq" >}}
 </div>
