Passage des images en WebP 1600px qualité 90 Je laisse les png si on veut revenir dessus

--- a/content/apprentissage/m-2000c.md
+++ b/content/apprentissage/m-2000c.md
@@ -3,7 +3,7 @@ title = "Mirage 2000C"
 weight = 1984
 +++
 
-<img src=/apprentissage/m2k_soleil.png class=decoration />
+<img src=/apprentissage/m2k_soleil.webp class=decoration />
 
 <div class="contenu"> <!-- le hangar de Sklang //-->
 {{< canal-youtube "id" "UCd6iQyhOcUrWR6DrRoMzeQg" >}}
@@ -118,5 +118,5 @@ weight = 1984
 {{< ressource-video-youtube "0lZgD_thj9Y" >}}
 </div>
 
-<img src=/apprentissage/m2k_pc.png class=decoration />
+<img src=/apprentissage/m2k_pc.webp class=decoration />
 
